# aleatory

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  README.rst  bureadme.rst  pyproject.toml  requirements.txt  utils.py
.github/workflows/: python-package.yml
aleatory/gaussian/: __init__.py  gaussian_processes.py  gaussian_widgets_test.ipynb  gp_base.py
aleatory/processes/: __init__.py  base.py  base_analytical.py  base_eu.py
aleatory/stats/: __init__.py  non_central_chi.py  variance_gamma.py
aleatory/styles/: __init__.py  quant-pastel-light.mplstyle  quant_pastel.py
aleatory/utils/: kernels.py  plotters.py  plotters_2d.py  (+4 more)
docs/: requirements.txt
examples/: README.rst  plot_arithmetic_brownian_motion.py  plot_bes.py  plot_besq.py  plot_brownian_2d.py  plot_brownian_bridge.py  plot_brownian_excursion.py  plot_brownian_meander.py  plot_brownian_motion.py  plot_cev.py  plot_cir.py  plot_ckls.py  plot_correlated_bms.py  plot_fbm.py  plot_galton_watson.py  plot_gamma.py  plot_gaussian_matern.py  plot_gaussian_periodic.py  plot_gaussian_rational.py  plot_gaussian_rbf.py  plot_gaussian_squared_exponential.py  plot_gbm.py  plot_hawkes.py  plot_inverse_gaussian.py  plot_ou.py  plot_poisson.py  plot_poisson_mixed.py  plot_poisson_non_homogeneous.py  plot_random_walk.py  plot_random_walk_2d.py  plot_simple_random_walk.py  plot_variance_gamma.py  plot_vasicek.py  plot_white_noise.py
replica/: base.py  base_EMProcess.py  base_paths.py  brownian_motion.py  brownian_motion_paths.py  cev_process.py  cev_process_paths.py  cir_process.py  cir_process_paths.py  gaussian.py  geometric_brownian_motion.py  geometric_brownian_motion_paths.py  ou_process.py  ou_process_paths.py  testing.py  utils.py
tests/: test_advance.py  test_bes.py  test_bm.py  test_charts.py  test_ckls.py  test_gamma.py  test_gaussian_processes.py  test_marginal_functions.py  test_multiprocess_sample.py  test_ncx.py  test_qablet.py  test_transormation_em.py  testing.py  testing_charts.py
(+102 files in other folders)
