[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aleatory"
version = "1.1.1"
authors = [{ name = "Dialid Santiago", email = "d.santiago@outlook.com" }, ]
description = "Stochastic Processes Simulation and Visualisation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pandas>=1.5.2",
                "numpy>=1.23.5",
                "scipy>=1.9.3",
                "matplotlib>=3.6.2",
                "statsmodels>=0.13.5",
                "parameterized>=0.8.1"
                ]

classifiers = ["Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization"]

[project.urls]
"Homepage" = "https://github.com/quantgirluk/aleatory"
"Bug Tracker" = "https://github.com/quantgirluk/aleatory/issues"
"Documentation" = "https://aleatory.readthedocs.io/en/latest/"

